# mosquitto-pgsql-auth

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
example/: docker-compose.yml
example/mosquitto/: mosquitto.conf
example/postgres/: init.sql
src/: plugin.c
test/: docker-compose.yml
test/mosquitto/: Dockerfile  mosquitto.conf
